# study-for-visable-

./: README.md
R1/: package.xml  requirements.txt  setup.cfg  setup.py
R1/config/: tf_config.yaml
R1/launch/: r1_vision.launch.py  r1_vision_with_fastlio.launch.py
R1/r1_vision/: __init__.py  comms.py  cube_localization.py  depth_processing.py  detection.py  gravity_estimation.py  normal_estimation.py  pointcloud_fusion.py  pose_estimation.py  r1_vision_node.py  roi_processing.py  tracking.py  utils.py
R1/resource/: r1_vision
R1/rviz/: r1_vision.rviz
